--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <main>
     <section id="home">
-      <h1>Your Name</h1>
+      <h1>Cristian Simut</h1>
       <p>Web Developer | Designer | Problem Solver</p>
     </section>
 
@@ -34,9 +34,10 @@
       <div class="projects-container">
         <div class="project-card">
   <img src="assets/images/project1.png" alt="Project 1 screenshot" />
-  <h3>Project One</h3>
-  <p>This is a brief description of project one.</p>
-  <a href="https://github.com/yourusername/project1" target="_blank">View Code</a>
+  <h3>Personal Portfolio</h3>
+  <p>This is my personal portfolio coded by me. </p>
+  <p>It's one of my first projects. </p>
+  <a href="https://github.com/cris27-web/portfolio-website" target="_blank">View Code</a>
 </div>
       </div>
     </section>
