--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Your Name | Web Developer Portfolio</title>
   <link rel="stylesheet" href="css/styles.css" />
+  <!-- Font Awesome CDN for social icons -->
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+  integrity="sha512-xxxxx"
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+/>
+
 </head>
 <body>
   <header>
@@ -46,8 +55,17 @@
       <h2>Contact Me</h2>
       <p>Find me on:</p>
       <div class="social-links">
-        <!-- Social icons/links -->
-      </div>
+  <a href="mailto:cristian.simut@yahoo.com" target="_blank" aria-label="Email">
+    <i class="fas fa-envelope"></i>
+  </a>
+  <a href="https://github.com/cris27-web" target="_blank" aria-label="GitHub">
+    <i class="fab fa-github"></i>
+  </a>
+  <a href="https://www.linkedin.com/in/yourusername/" target="_blank" aria-label="LinkedIn">
+    <i class="fab fa-linkedin"></i>
+  </a>
+</div>
+
     </section>
   </main>
 
